@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2020 MegaMek team
+ * Copyright (c) 2020-2022 - The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MekHQ.
  *
@@ -16,12 +16,30 @@
  * You should have received a copy of the GNU General Public License
  * along with MekHQ. If not, see <http://www.gnu.org/licenses/>.
  */
-
 package mekhq.campaign.parts;
 
-import static org.junit.Assert.*;
-import static org.mockito.Mockito.*;
+import megamek.Version;
+import megamek.common.*;
+import mekhq.campaign.Campaign;
+import mekhq.campaign.CampaignOptions;
+import mekhq.campaign.Quartermaster;
+import mekhq.campaign.Warehouse;
+import mekhq.campaign.parts.enums.PartRepairType;
+import mekhq.campaign.parts.equipment.EquipmentPart;
+import mekhq.campaign.personnel.Person;
+import mekhq.campaign.personnel.PersonnelOptions;
+import mekhq.campaign.personnel.SkillType;
+import mekhq.campaign.unit.Unit;
+import mekhq.campaign.work.WorkTime;
+import mekhq.utilities.MHQXMLUtility;
+import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentCaptor;
+import org.w3c.dom.Document;
+import org.w3c.dom.Element;
+import org.xml.sax.SAXException;
 
+import javax.xml.parsers.DocumentBuilder;
+import javax.xml.parsers.ParserConfigurationException;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.PrintWriter;
@@ -30,36 +48,8 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.function.Predicate;
 
-import javax.xml.parsers.DocumentBuilder;
-import javax.xml.parsers.ParserConfigurationException;
-
-import org.junit.Test;
-import org.mockito.ArgumentCaptor;
-import org.w3c.dom.Document;
-import org.w3c.dom.Element;
-import org.xml.sax.SAXException;
-
-import megamek.common.CriticalSlot;
-import megamek.common.Entity;
-import megamek.common.EquipmentType;
-import megamek.common.ILocationExposureStatus;
-import megamek.common.LandAirMech;
-import megamek.common.Mech;
-import megamek.common.Mounted;
-import megamek.common.TargetRoll;
-import mekhq.MekHqXmlUtil;
-import mekhq.Version;
-import mekhq.campaign.Campaign;
-import mekhq.campaign.CampaignOptions;
-import mekhq.campaign.Quartermaster;
-import mekhq.campaign.Warehouse;
-import mekhq.campaign.parts.equipment.EquipmentPart;
-import mekhq.campaign.parts.enums.PartRepairType;
-import mekhq.campaign.personnel.Person;
-import mekhq.campaign.personnel.PersonnelOptions;
-import mekhq.campaign.personnel.SkillType;
-import mekhq.campaign.unit.Unit;
-import mekhq.campaign.work.WorkTime;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 public class MekLocationTest {
     @Test
@@ -80,7 +70,7 @@ public class MekLocationTest {
         boolean isQuad = true;
         boolean hasSensors = true;
         boolean hasLifeSupport = true;
-        MekLocation mekLocation = new MekLocation(location, tonnage, structureType, isClan, 
+        MekLocation mekLocation = new MekLocation(location, tonnage, structureType, isClan,
                 hasTSM, isQuad, hasSensors, hasLifeSupport, mockCampaign);
 
         assertEquals(location, mekLocation.getLoc());
@@ -106,7 +96,7 @@ public class MekLocationTest {
         boolean isQuad = true;
         boolean hasSensors = true;
         boolean hasLifeSupport = true;
-        MekLocation mekLocation = new MekLocation(location, tonnage, structureType, isClan, 
+        MekLocation mekLocation = new MekLocation(location, tonnage, structureType, isClan,
                 hasTSM, isQuad, hasSensors, hasLifeSupport, mockCampaign);
 
         MekLocation clone = mekLocation.clone();
@@ -137,7 +127,7 @@ public class MekLocationTest {
         boolean isQuad = true;
         boolean hasSensors = false;
         boolean hasLifeSupport = false;
-        MekLocation mekLocation = new MekLocation(location, tonnage, structureType, isClan, 
+        MekLocation mekLocation = new MekLocation(location, tonnage, structureType, isClan,
                 hasTSM, isQuad, hasSensors, hasLifeSupport, mockCampaign);
 
         MissingMekLocation missing = mekLocation.getMissingPart();
@@ -218,7 +208,7 @@ public class MekLocationTest {
         boolean isQuad = true;
         boolean hasSensors = true;
         boolean hasLifeSupport = true;
-        MekLocation mekLocation = new MekLocation(location, tonnage, structureType, isClan, 
+        MekLocation mekLocation = new MekLocation(location, tonnage, structureType, isClan,
                 hasTSM, isQuad, hasSensors, hasLifeSupport, mockCampaign);
 
         assertTrue(mekLocation.isSamePartType(mekLocation));
@@ -229,90 +219,90 @@ public class MekLocationTest {
         assertTrue(other.isSamePartType(mekLocation));
 
         // Same if structure type is not Endo Steel and we're clan vs not clan
-        mekLocation = new MekLocation(location, tonnage, EquipmentType.T_STRUCTURE_INDUSTRIAL, isClan, 
+        mekLocation = new MekLocation(location, tonnage, EquipmentType.T_STRUCTURE_INDUSTRIAL, isClan,
                 hasTSM, isQuad, hasSensors, hasLifeSupport, mockCampaign);
-        other = new MekLocation(location, tonnage, EquipmentType.T_STRUCTURE_INDUSTRIAL, !isClan, 
+        other = new MekLocation(location, tonnage, EquipmentType.T_STRUCTURE_INDUSTRIAL, !isClan,
             hasTSM, isQuad, hasSensors, hasLifeSupport, mockCampaign);
         assertTrue(mekLocation.isSamePartType(other));
         assertTrue(other.isSamePartType(mekLocation));
 
         // Clan and IS Endo Steel differ
-        mekLocation = new MekLocation(location, tonnage, EquipmentType.T_STRUCTURE_ENDO_STEEL, isClan, 
+        mekLocation = new MekLocation(location, tonnage, EquipmentType.T_STRUCTURE_ENDO_STEEL, isClan,
                 hasTSM, isQuad, hasSensors, hasLifeSupport, mockCampaign);
-        other = new MekLocation(location, tonnage, EquipmentType.T_STRUCTURE_ENDO_STEEL, !isClan, 
+        other = new MekLocation(location, tonnage, EquipmentType.T_STRUCTURE_ENDO_STEEL, !isClan,
             hasTSM, isQuad, hasSensors, hasLifeSupport, mockCampaign);
         assertFalse(mekLocation.isSamePartType(other));
         assertFalse(other.isSamePartType(mekLocation));
 
         // Restore the original setup
-        mekLocation = new MekLocation(location, tonnage, structureType, isClan, 
+        mekLocation = new MekLocation(location, tonnage, structureType, isClan,
                 hasTSM, isQuad, hasSensors, hasLifeSupport, mockCampaign);
 
         // Different locations
-        other = new MekLocation(otherLocation, tonnage, structureType, isClan, 
+        other = new MekLocation(otherLocation, tonnage, structureType, isClan,
             hasTSM, isQuad, hasSensors, hasLifeSupport, mockCampaign);
         assertFalse(mekLocation.isSamePartType(other));
         assertFalse(other.isSamePartType(mekLocation));
 
         // Different tonnage
-        other = new MekLocation(location, tonnage + 10, structureType, isClan, 
+        other = new MekLocation(location, tonnage + 10, structureType, isClan,
                 hasTSM, isQuad, hasSensors, hasLifeSupport, mockCampaign);
         assertFalse(mekLocation.isSamePartType(other));
         assertFalse(other.isSamePartType(mekLocation));
 
         // Different structure
-        other = new MekLocation(location, tonnage, otherStructureType, isClan, 
+        other = new MekLocation(location, tonnage, otherStructureType, isClan,
                 hasTSM, isQuad, hasSensors, hasLifeSupport, mockCampaign);
         assertFalse(mekLocation.isSamePartType(other));
         assertFalse(other.isSamePartType(mekLocation));
 
         // Different TSM
-        other = new MekLocation(location, tonnage, structureType, isClan, 
+        other = new MekLocation(location, tonnage, structureType, isClan,
                 !hasTSM, isQuad, hasSensors, hasLifeSupport, mockCampaign);
         assertFalse(mekLocation.isSamePartType(other));
         assertFalse(other.isSamePartType(mekLocation));
 
         // Arms for quads must match on quad status, but others do not
-        mekLocation = new MekLocation(Mech.LOC_RARM, tonnage, structureType, isClan, 
+        mekLocation = new MekLocation(Mech.LOC_RARM, tonnage, structureType, isClan,
                 hasTSM, true, hasSensors, hasLifeSupport, mockCampaign);
-        other = new MekLocation(Mech.LOC_LARM, tonnage, structureType, isClan, 
+        other = new MekLocation(Mech.LOC_LARM, tonnage, structureType, isClan,
                 hasTSM, true, hasSensors, hasLifeSupport, mockCampaign);
         assertFalse(mekLocation.isSamePartType(other));
         assertFalse(other.isSamePartType(mekLocation));
 
-        mekLocation = new MekLocation(Mech.LOC_LARM, tonnage, structureType, isClan, 
+        mekLocation = new MekLocation(Mech.LOC_LARM, tonnage, structureType, isClan,
                 hasTSM, true, hasSensors, hasLifeSupport, mockCampaign);
-        other = new MekLocation(Mech.LOC_LARM, tonnage, structureType, isClan, 
+        other = new MekLocation(Mech.LOC_LARM, tonnage, structureType, isClan,
                 hasTSM, true, hasSensors, hasLifeSupport, mockCampaign);
         assertTrue(mekLocation.isSamePartType(other));
         assertTrue(other.isSamePartType(mekLocation));
 
-        mekLocation = new MekLocation(Mech.LOC_LARM, tonnage, structureType, isClan, 
+        mekLocation = new MekLocation(Mech.LOC_LARM, tonnage, structureType, isClan,
                 hasTSM, false, hasSensors, hasLifeSupport, mockCampaign);
-        other = new MekLocation(Mech.LOC_LARM, tonnage, structureType, isClan, 
+        other = new MekLocation(Mech.LOC_LARM, tonnage, structureType, isClan,
                 hasTSM, false, hasSensors, hasLifeSupport, mockCampaign);
         assertTrue(mekLocation.isSamePartType(other));
         assertTrue(other.isSamePartType(mekLocation));
 
-        mekLocation = new MekLocation(location, tonnage, structureType, isClan, 
+        mekLocation = new MekLocation(location, tonnage, structureType, isClan,
                 hasTSM, isQuad, hasSensors, hasLifeSupport, mockCampaign);
-        other = new MekLocation(location, tonnage, structureType, isClan, 
+        other = new MekLocation(location, tonnage, structureType, isClan,
                 hasTSM, !isQuad, hasSensors, hasLifeSupport, mockCampaign);
         assertTrue(mekLocation.isSamePartType(other));
         assertTrue(other.isSamePartType(mekLocation));
 
         // Restore the original setup
-        mekLocation = new MekLocation(location, tonnage, structureType, isClan, 
+        mekLocation = new MekLocation(location, tonnage, structureType, isClan,
                 hasTSM, isQuad, hasSensors, hasLifeSupport, mockCampaign);
 
         // Different Sensors (off unit)
-        other = new MekLocation(location, tonnage, structureType, isClan, 
+        other = new MekLocation(location, tonnage, structureType, isClan,
                 hasTSM, isQuad, !hasSensors, hasLifeSupport, mockCampaign);
         assertFalse(mekLocation.isSamePartType(other));
         assertFalse(other.isSamePartType(mekLocation));
 
         // Different Life Support (off unit)
-        other = new MekLocation(location, tonnage, structureType, isClan, 
+        other = new MekLocation(location, tonnage, structureType, isClan,
                 hasTSM, isQuad, hasSensors, !hasLifeSupport, mockCampaign);
         assertFalse(mekLocation.isSamePartType(other));
         assertFalse(other.isSamePartType(mekLocation));
@@ -325,36 +315,36 @@ public class MekLocationTest {
         mekLocation.setUnit(unit);
 
         // Different Sensors (on unit)
-        other = new MekLocation(location, tonnage, structureType, isClan, 
+        other = new MekLocation(location, tonnage, structureType, isClan,
                 hasTSM, isQuad, !hasSensors, hasLifeSupport, mockCampaign);
         assertTrue(mekLocation.isSamePartType(other));
         assertTrue(other.isSamePartType(mekLocation));
 
         // Different Life Support (on unit)
-        other = new MekLocation(location, tonnage, structureType, isClan, 
+        other = new MekLocation(location, tonnage, structureType, isClan,
                 hasTSM, isQuad, hasSensors, !hasLifeSupport, mockCampaign);
         assertTrue(mekLocation.isSamePartType(other));
         assertTrue(other.isSamePartType(mekLocation));
     }
-    
+
     @Test
     public void mekLocationWriteToXmlTest() throws ParserConfigurationException, SAXException, IOException {
         Campaign mockCampaign = mock(Campaign.class);
-        MekLocation mekLocation = new MekLocation(Mech.LOC_CT, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL, 
+        MekLocation mekLocation = new MekLocation(Mech.LOC_CT, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL,
                 true, true, true, true, true, mockCampaign);
         mekLocation.setId(25);
 
         // Write the MekLocation XML
         StringWriter sw = new StringWriter();
         PrintWriter pw = new PrintWriter(sw);
-        mekLocation.writeToXml(pw, 0);
+        mekLocation.writeToXML(pw, 0);
 
         // Get the MekLocation XML
         String xml = sw.toString();
-        assertFalse(xml.trim().isEmpty());
+        assertFalse(xml.isBlank());
 
         // Using factory get an instance of document builder
-        DocumentBuilder db = MekHqXmlUtil.newSafeDocumentBuilder();
+        DocumentBuilder db = MHQXMLUtility.newSafeDocumentBuilder();
 
         // Parse using builder to get DOM representation of the XML file
         Document xmlDoc = db.parse(new ByteArrayInputStream(xml.getBytes()));
@@ -363,7 +353,7 @@ public class MekLocationTest {
         assertEquals("part", partElt.getNodeName());
 
         // Deserialize the MekLocation
-        Part deserializedPart = Part.generateInstanceFromXML(partElt, new Version("1.0.0"));
+        Part deserializedPart = Part.generateInstanceFromXML(partElt, new Version());
         assertNotNull(deserializedPart);
         assertTrue(deserializedPart instanceof MekLocation);
 
@@ -393,7 +383,7 @@ public class MekLocationTest {
         when(unit.getEntity()).thenReturn(entity);
 
         int location = Mech.LOC_LLEG;
-        MekLocation mekLocation = new MekLocation(location, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL, 
+        MekLocation mekLocation = new MekLocation(location, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL,
                 true, true, true, true, true, mockCampaign);
 
         assertFalse(mekLocation.isBlownOff());
@@ -508,7 +498,7 @@ public class MekLocationTest {
         when(unit.getEntity()).thenReturn(entity);
 
         int location = Mech.LOC_LLEG;
-        MekLocation mekLocation = new MekLocation(location, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL, 
+        MekLocation mekLocation = new MekLocation(location, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL,
                 true, true, true, true, true, mockCampaign);
 
         // not on unit
@@ -545,7 +535,7 @@ public class MekLocationTest {
         when(unit.getEntity()).thenReturn(entity);
 
         int location = Mech.LOC_LLEG;
-        MekLocation mekLocation = new MekLocation(location, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL, 
+        MekLocation mekLocation = new MekLocation(location, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL,
                 true, true, true, true, true, mockCampaign);
         mekLocation.setUnit(unit);
 
@@ -578,10 +568,10 @@ public class MekLocationTest {
         Entity entity = mock(Entity.class);
         when(entity.getWeight()).thenReturn(100.0);
         when(unit.getEntity()).thenReturn(entity);
-        
+
         int location = Mech.LOC_RT;
         MekLocation torso = new MekLocation(location, 30, 0, false, false, false, false, false, mockCampaign);
-        
+
         // Not on a unit
         assertFalse(torso.needsFixing());
 
@@ -643,13 +633,13 @@ public class MekLocationTest {
 
         // Destroyed leg can be repaired even if everything else is gone
         int location = Mech.LOC_LLEG;
-        MekLocation mekLocation = new MekLocation(location, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL, 
+        MekLocation mekLocation = new MekLocation(location, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL,
                 true, true, true, true, true, mockCampaign);
         mekLocation.setUnit(unit);
         mekLocation.setBlownOff(true);
         assertNull(mekLocation.checkFixable());
         location = Mech.LOC_RLEG;
-        mekLocation = new MekLocation(location, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL, 
+        mekLocation = new MekLocation(location, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL,
                 true, true, true, true, true, mockCampaign);
         mekLocation.setUnit(unit);
         mekLocation.setBlownOff(true);
@@ -657,7 +647,7 @@ public class MekLocationTest {
 
         // Destroyed head can be repaired even if everything else is gone
         location = Mech.LOC_HEAD;
-        mekLocation = new MekLocation(location, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL, 
+        mekLocation = new MekLocation(location, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL,
                 true, true, true, true, true, mockCampaign);
         mekLocation.setUnit(unit);
         mekLocation.setBlownOff(true);
@@ -665,13 +655,13 @@ public class MekLocationTest {
 
         // Destroyed torsos can be repaired
         location = Mech.LOC_RT;
-        mekLocation = new MekLocation(location, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL, 
+        mekLocation = new MekLocation(location, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL,
                 true, true, true, true, true, mockCampaign);
         mekLocation.setUnit(unit);
         mekLocation.setBlownOff(true);
         assertNull(mekLocation.checkFixable());
         location = Mech.LOC_LT;
-        mekLocation = new MekLocation(location, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL, 
+        mekLocation = new MekLocation(location, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL,
                 true, true, true, true, true, mockCampaign);
         mekLocation.setUnit(unit);
         mekLocation.setBlownOff(true);
@@ -679,7 +669,7 @@ public class MekLocationTest {
 
         // Arms cannot without their respective torsos
         location = Mech.LOC_RARM;
-        mekLocation = new MekLocation(location, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL, 
+        mekLocation = new MekLocation(location, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL,
                 true, true, true, true, true, mockCampaign);
         mekLocation.setUnit(unit);
         mekLocation.setBlownOff(true);
@@ -692,7 +682,7 @@ public class MekLocationTest {
         assertNull(mekLocation.checkFixable());
 
         location = Mech.LOC_LARM;
-        mekLocation = new MekLocation(location, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL, 
+        mekLocation = new MekLocation(location, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL,
                 true, true, true, true, true, mockCampaign);
         mekLocation.setUnit(unit);
         mekLocation.setBlownOff(true);
@@ -730,7 +720,7 @@ public class MekLocationTest {
     }
 
     @Test
-    public void checkSalvagableNotSalvagingTest() {
+    public void checkSalvageableNotSalvagingTest() {
         Campaign mockCampaign = mock(Campaign.class);
         Unit unit = mock(Unit.class);
         Entity entity = mock(Entity.class);
@@ -741,11 +731,11 @@ public class MekLocationTest {
         MekLocation mekLocation = new MekLocation(Mech.LOC_RARM, 30, 0, false, false, false, false, false, mockCampaign);
         mekLocation.setUnit(unit);
 
-        assertNull(mekLocation.checkSalvagable());
+        assertNull(mekLocation.checkSalvageable());
     }
 
     @Test
-    public void checkSalvagableBadHipShoulderTest() {
+    public void checkSalvageableBadHipShoulderTest() {
         Campaign mockCampaign = mock(Campaign.class);
         Unit unit = mock(Unit.class);
         Entity entity = mock(Entity.class);
@@ -760,16 +750,16 @@ public class MekLocationTest {
 
         // Must scrap a limb with a bad hip or shoulder
         doReturn(true).when(unit).hasBadHipOrShoulder(eq(location));
-        assertNotNull(mekLocation.checkSalvagable());
+        assertNotNull(mekLocation.checkSalvageable());
         assertNotNull(mekLocation.checkFixable());
 
         doReturn(false).when(unit).hasBadHipOrShoulder(eq(location));
-        assertNull(mekLocation.checkSalvagable());
+        assertNull(mekLocation.checkSalvageable());
         assertNull(mekLocation.checkFixable());
     }
-    
+
     @Test
-    public void checkSalvagableTorsoWithArmsIntactTest() {
+    public void checkSalvageableTorsoWithArmsIntactTest() {
         Campaign mockCampaign = mock(Campaign.class);
         Unit unit = mock(Unit.class);
         Mech entity = mock(Mech.class);
@@ -784,11 +774,11 @@ public class MekLocationTest {
 
         // Cannot salvage a torso if the attached arm is Okay
         doReturn(false).when(entity).isLocationBad(eq(Mech.LOC_RARM));
-        assertNotNull(mekLocation.checkSalvagable());
+        assertNotNull(mekLocation.checkSalvageable());
         assertNotNull(mekLocation.checkFixable());
 
         doReturn(true).when(entity).isLocationBad(eq(Mech.LOC_RARM));
-        assertNull(mekLocation.checkSalvagable());
+        assertNull(mekLocation.checkSalvageable());
         assertNull(mekLocation.checkFixable());
 
         location = Mech.LOC_LT;
@@ -797,16 +787,16 @@ public class MekLocationTest {
 
         // Cannot salvage a torso if the attached arm is Okay
         doReturn(false).when(entity).isLocationBad(eq(Mech.LOC_LARM));
-        assertNotNull(mekLocation.checkSalvagable());
+        assertNotNull(mekLocation.checkSalvageable());
         assertNotNull(mekLocation.checkFixable());
 
         doReturn(true).when(entity).isLocationBad(eq(Mech.LOC_LARM));
-        assertNull(mekLocation.checkSalvagable());
+        assertNull(mekLocation.checkSalvageable());
         assertNull(mekLocation.checkFixable());
     }
 
     @Test
-    public void checkSalvagableTorsoWithArmsIntactQuadTest() {
+    public void checkSalvageableTorsoWithArmsIntactQuadTest() {
         Campaign mockCampaign = mock(Campaign.class);
         Unit unit = mock(Unit.class);
         Mech entity = mock(Mech.class);
@@ -821,11 +811,11 @@ public class MekLocationTest {
 
         // Cannot salvage a torso if the attached arm is Okay
         doReturn(false).when(entity).isLocationBad(eq(Mech.LOC_RARM));
-        assertNotNull(mekLocation.checkSalvagable());
+        assertNotNull(mekLocation.checkSalvageable());
         assertNotNull(mekLocation.checkFixable());
 
         doReturn(true).when(entity).isLocationBad(eq(Mech.LOC_RARM));
-        assertNull(mekLocation.checkSalvagable());
+        assertNull(mekLocation.checkSalvageable());
         assertNull(mekLocation.checkFixable());
 
         location = Mech.LOC_LT;
@@ -834,16 +824,16 @@ public class MekLocationTest {
 
         // Cannot salvage a torso if the attached arm is Okay
         doReturn(false).when(entity).isLocationBad(eq(Mech.LOC_LARM));
-        assertNotNull(mekLocation.checkSalvagable());
+        assertNotNull(mekLocation.checkSalvageable());
         assertNotNull(mekLocation.checkFixable());
 
         doReturn(true).when(entity).isLocationBad(eq(Mech.LOC_LARM));
-        assertNull(mekLocation.checkSalvagable());
+        assertNull(mekLocation.checkSalvageable());
         assertNull(mekLocation.checkFixable());
     }
 
     @Test
-    public void checkSalvagableArmorStillPresentTest() {
+    public void checkSalvageableArmorStillPresentTest() {
         Campaign mockCampaign = mock(Campaign.class);
         Unit unit = mock(Unit.class);
         Mech entity = mock(Mech.class);
@@ -857,31 +847,31 @@ public class MekLocationTest {
         mekLocation.setUnit(unit);
 
         // No armor
-        assertNull(mekLocation.checkSalvagable());
+        assertNull(mekLocation.checkSalvageable());
         assertNull(mekLocation.checkFixable());
 
         // Some armor, for real.
         doReturn(1).when(entity).getArmorForReal(eq(location), anyBoolean());
-        assertNotNull(mekLocation.checkSalvagable());
+        assertNotNull(mekLocation.checkSalvageable());
         assertNotNull(mekLocation.checkFixable());
 
         // Some rear armor
         doReturn(0).when(entity).getArmorForReal(eq(location), eq(false));
         doReturn(true).when(entity).hasRearArmor(eq(location));
         doReturn(1).when(entity).getArmorForReal(eq(location), eq(true));
-        assertNotNull(mekLocation.checkSalvagable());
+        assertNotNull(mekLocation.checkSalvageable());
         assertNotNull(mekLocation.checkFixable());
 
         // No rear armor
         doReturn(0).when(entity).getArmorForReal(eq(location), eq(false));
         doReturn(true).when(entity).hasRearArmor(eq(location));
         doReturn(0).when(entity).getArmorForReal(eq(location), eq(true));
-        assertNull(mekLocation.checkSalvagable());
+        assertNull(mekLocation.checkSalvageable());
         assertNull(mekLocation.checkFixable());
     }
 
     @Test
-    public void checkSalvagableOnlyIgnorableSystemsTest() {
+    public void checkSalvageableOnlyIgnorableSystemsTest() {
         Campaign mockCampaign = mock(Campaign.class);
         Unit unit = mock(Unit.class);
         Mech entity = mock(Mech.class);
@@ -894,7 +884,7 @@ public class MekLocationTest {
         MekLocation mekLocation = new MekLocation(location, 30, 0, false, false, false, false, false, mockCampaign);
         mekLocation.setUnit(unit);
 
-        int[] systems = new int[] { Mech.ACTUATOR_HIP, Mech.ACTUATOR_SHOULDER, 
+        int[] systems = new int[] { Mech.ACTUATOR_HIP, Mech.ACTUATOR_SHOULDER,
             Mech.SYSTEM_LIFE_SUPPORT, Mech.SYSTEM_SENSORS
         };
         doReturn(systems.length + 1).when(entity).getNumberOfCriticals(eq(location));
@@ -910,12 +900,12 @@ public class MekLocationTest {
         }
 
         // No hittable or repairable systems
-        assertNull(mekLocation.checkSalvagable());
+        assertNull(mekLocation.checkSalvageable());
         assertNull(mekLocation.checkFixable());
     }
 
     @Test
-    public void checkSalvagableRepairableSystemsTest() {
+    public void checkSalvageableRepairableSystemsTest() {
         Campaign mockCampaign = mock(Campaign.class);
         Unit unit = mock(Unit.class);
         Mech entity = mock(Mech.class);
@@ -935,14 +925,13 @@ public class MekLocationTest {
         doReturn(repairable).when(entity).getCritical(eq(location), eq(0));
 
         // No repairable systems
-        assertNull(mekLocation.checkSalvagable());
+        assertNull(mekLocation.checkSalvageable());
         assertNull(mekLocation.checkFixable());
 
         when(repairable.isRepairable()).thenReturn(true);
 
         // A repairable system remains
-        String message;
-        message = mekLocation.checkSalvagable();
+        String message = mekLocation.checkSalvageable();
         assertNotNull(message);
         assertTrue(message.contains("Repairable Part"));
 
@@ -952,7 +941,7 @@ public class MekLocationTest {
     }
 
     @Test
-    public void checkSalvagableRepairableNamedSystemsTest() {
+    public void checkSalvageableRepairableNamedSystemsTest() {
         Campaign mockCampaign = mock(Campaign.class);
         Unit unit = mock(Unit.class);
         Mech entity = mock(Mech.class);
@@ -984,14 +973,13 @@ public class MekLocationTest {
         }).when(unit).findPart(any());
 
         // No repairable systems
-        assertNull(mekLocation.checkSalvagable());
+        assertNull(mekLocation.checkSalvageable());
         assertNull(mekLocation.checkFixable());
 
         when(repairable.isRepairable()).thenReturn(true);
 
         // A repairable system remains
-        String message;
-        message = mekLocation.checkSalvagable();
+        String message = mekLocation.checkSalvageable();
         assertNotNull(message);
         assertTrue(message.contains(partName));
 
@@ -999,7 +987,7 @@ public class MekLocationTest {
         assertNotNull(message);
         assertTrue(message.contains(partName));
     }
-    
+
     @Test
     public void checkScrappableCannotScrapCenterTorsoTest() {
         Campaign mockCampaign = mock(Campaign.class);
@@ -1014,7 +1002,7 @@ public class MekLocationTest {
 
         assertNotNull(mekLocation.checkScrappable());
     }
-    
+
     @Test
     public void checkScrappableTorsoWithArmsIntactTest() {
         Campaign mockCampaign = mock(Campaign.class);
@@ -1208,13 +1196,11 @@ public class MekLocationTest {
         doReturn(mockAvionics).when(entity).getCritical(eq(location), eq(1));
 
         // No missing parts
-        doAnswer(inv -> {
-            return null;
-        }).when(unit).findPart(any());
+        doAnswer(inv -> null).when(unit).findPart(any());
 
         // We cannot remove this torso
         assertNotNull(torso.checkFixable());
-        assertNotNull(torso.checkSalvagable());
+        assertNotNull(torso.checkSalvageable());
         assertNotNull(torso.checkScrappable());
 
         // Only missing landing gear, avionics are still good
@@ -1226,7 +1212,7 @@ public class MekLocationTest {
 
         // We cannot remove this torso
         assertNotNull(torso.checkFixable());
-        assertNotNull(torso.checkSalvagable());
+        assertNotNull(torso.checkSalvageable());
         assertNotNull(torso.checkScrappable());
 
         // Only missing avionics, landing gear is still good
@@ -1238,7 +1224,7 @@ public class MekLocationTest {
 
         // We cannot remove this torso
         assertNotNull(torso.checkFixable());
-        assertNotNull(torso.checkSalvagable());
+        assertNotNull(torso.checkSalvageable());
         assertNotNull(torso.checkScrappable());
 
         // Missing both Landing Gear and Avionics
@@ -1255,7 +1241,7 @@ public class MekLocationTest {
 
         // We CAN remove this torso
         assertNull(torso.checkFixable());
-        assertNull(torso.checkSalvagable());
+        assertNull(torso.checkSalvageable());
         assertNull(torso.checkScrappable());
     }
 
@@ -1284,13 +1270,11 @@ public class MekLocationTest {
         doReturn(mockAvionics).when(entity).getCritical(eq(location), eq(0));
 
         // No missing parts
-        doAnswer(inv -> {
-            return null;
-        }).when(unit).findPart(any());
+        doAnswer(inv -> null).when(unit).findPart(any());
 
         // We cannot remove this head
         assertNotNull(head.checkFixable());
-        assertNotNull(head.checkSalvagable());
+        assertNotNull(head.checkSalvageable());
         assertNotNull(head.checkScrappable());
 
         // Missing avionics
@@ -1307,7 +1291,7 @@ public class MekLocationTest {
 
         // We CAN remove this head
         assertNull(head.checkFixable());
-        assertNull(head.checkSalvagable());
+        assertNull(head.checkSalvageable());
         assertNull(head.checkScrappable());
     }
 
@@ -1321,13 +1305,13 @@ public class MekLocationTest {
 
         int location = Mech.LOC_LLEG;
         MekLocation mekLocation = new MekLocation(location, 30, 0, false, false, false, false, false, mockCampaign);
-        
+
         // not on unit
         mekLocation.doMaintenanceDamage(100);
 
         // No change.
         assertEquals(1.0, mekLocation.getPercent(), 0.001);
-        
+
         // On unit
         mekLocation.setUnit(unit);
 
@@ -1395,7 +1379,7 @@ public class MekLocationTest {
         mekLocation.remove(true);
         assertFalse(mekLocation.isBreached());
     }
-    
+
     @Test
     public void removeSimpleTest() {
         Campaign mockCampaign = mock(Campaign.class);
@@ -1541,7 +1525,7 @@ public class MekLocationTest {
 
         verify(lifeSupport, times(1)).remove(eq(false));
     }
-    
+
     @Test
     public void removeHeadWithComponentsTest() {
         Campaign mockCampaign = mock(Campaign.class);
@@ -1580,7 +1564,7 @@ public class MekLocationTest {
         verify(sensors, times(1)).remove(eq(false));
         verify(lifeSupport, times(1)).remove(eq(false));
     }
-        
+
     @Test
     public void removeCenterTorsoDoesntAddMissingPartTest() {
         Campaign mockCampaign = mock(Campaign.class);
@@ -1625,7 +1609,7 @@ public class MekLocationTest {
         when(unit.getEntity()).thenReturn(entity);
 
         int location = Mech.LOC_LLEG;
-        MekLocation mekLocation = new MekLocation(location, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL, 
+        MekLocation mekLocation = new MekLocation(location, 100, EquipmentType.T_STRUCTURE_INDUSTRIAL,
                 true, true, true, true, true, mockCampaign);
 
         // Add the location to a unit
@@ -1645,7 +1629,7 @@ public class MekLocationTest {
 
         Part part = partCaptor.getValue();
         assertTrue(part instanceof MissingMekLocation);
-        assertEquals(location, ((MissingMekLocation) part).getLocation());
+        assertEquals(location, part.getLocation());
     }
 
     @Test
@@ -1692,7 +1676,7 @@ public class MekLocationTest {
 
         assertEquals(location, missingPart.getLocation());
     }
-    
+
     @Test
     public void salvageCenterTorsoDoesntAddMissingPartTest() {
         Campaign mockCampaign = mock(Campaign.class);
@@ -1765,7 +1749,7 @@ public class MekLocationTest {
 
         verify(entity, times(1)).setInternal(eq(originalInternal), eq(location));
     }
-    
+
     @Test
     public void fixBlownOffTest() {
         Campaign mockCampaign = mock(Campaign.class);
@@ -1802,7 +1786,7 @@ public class MekLocationTest {
         verify(mockSlot, times(1)).setMissing(eq(false));
         verify(mounted, times(1)).setMissing(eq(false));
     }
- 
+
     @Test
     public void fixBreachedTest() {
         Campaign mockCampaign = mock(Campaign.class);
@@ -1967,7 +1951,7 @@ public class MekLocationTest {
         Campaign mockCampaign = mock(Campaign.class);
 
         MekLocation centerTorso = new MekLocation(Mech.LOC_CT, 25, 0, false, false, false, false, false, mockCampaign);
-        
+
         assertTrue(centerTorso.isRightTechType(SkillType.S_TECH_MECH));
         assertFalse(centerTorso.isRightTechType(SkillType.S_TECH_MECHANIC));
     }
@@ -1979,13 +1963,13 @@ public class MekLocationTest {
         int structureType = EquipmentType.T_STRUCTURE_ENDO_STEEL;
         boolean isClan = true;
         MekLocation centerTorso = new MekLocation(Mech.LOC_CT, 25, structureType, isClan, false, false, false, false, mockCampaign);
-        
+
         assertNotNull(centerTorso.getTechAdvancement());
 
         structureType = EquipmentType.T_STRUCTURE_ENDO_STEEL;
         isClan = false;
         centerTorso = new MekLocation(Mech.LOC_CT, 25, structureType, isClan, false, false, false, false, mockCampaign);
-        
+
         assertNotNull(centerTorso.getTechAdvancement());
     }
 
@@ -1994,16 +1978,16 @@ public class MekLocationTest {
         Campaign mockCampaign = mock(Campaign.class);
 
         MekLocation centerTorso = new MekLocation(Mech.LOC_CT, 25, 0, false, false, false, false, false, mockCampaign);
-        
+
         assertEquals(PartRepairType.GENERAL_LOCATION, centerTorso.getMassRepairOptionType());
     }
-    
+
     @Test
     public void getRepairPartTypeTest() {
         Campaign mockCampaign = mock(Campaign.class);
 
         MekLocation centerTorso = new MekLocation(Mech.LOC_CT, 25, 0, false, false, false, false, false, mockCampaign);
-        
+
         assertEquals(PartRepairType.MEK_LOCATION, centerTorso.getRepairPartType());
     }
 
@@ -2012,7 +1996,7 @@ public class MekLocationTest {
         Campaign mockCampaign = mock(Campaign.class);
 
         MekLocation mekLocation = new MekLocation(Mech.LOC_CT, 25, 0, false, false, false, false, false, mockCampaign);
-        
+
         assertNotNull(mekLocation.getDetails());
         assertTrue(mekLocation.getDetails().startsWith("25 tons"));
         assertTrue(mekLocation.getDetails().contains("(100%)"));
@@ -2066,7 +2050,7 @@ public class MekLocationTest {
 
         MekLocation mekLocation = new MekLocation(location, 25, 0, false, false, false, false, false, mockCampaign);
         mekLocation.setUnit(unit);
-        
+
         assertNotNull(mekLocation.getDetails());
         assertEquals("Right Arm (100%)", mekLocation.getDetails());
         assertNotNull(mekLocation.getDetails(false));
@@ -2166,7 +2150,7 @@ public class MekLocationTest {
 
         TargetRoll siteMod = new TargetRoll(1, "site mod");
         when(unit.getSiteMod()).thenReturn(siteMod);
-        
+
         Person tech = mock(Person.class);
         PersonnelOptions mockOptions = mock(PersonnelOptions.class);
         when(tech.getOptions()).thenReturn(mockOptions);
